--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+* {
+
+  box-sizing: border-box;
+  
+}
+
+button, input[type="submit"], input[type="reset"] {
+	background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 header ul{
   display: inline;
   width: 340px;
@@ -13,26 +29,89 @@ header ul li{
 
 .a,.b {
 
-  border: 3px solid;
   padding: 10px;
   text-align: center;
+  font-size: 25px;
 
 }
 
+.a:hover{
+  color: lightgray;
+}
+
+.b{
+  margin-left: 40px;
+}
+
 .a{
-  margin-left: 350px;
+  margin-left: 270px;
 }
 
 
 .c{
   float: right;
-  padding: 10px;
+	margin: 0;
+  padding: 0.75rem 1.5rem;
+  position:relative;
+  top: -15px;
+	border: 0;
+	border-radius: 2rem;
+	background-color: #A9A9A9;
+	color: #fff;
+	text-decoration: none;
+	font-weight: 700;
+	font-size: 1.4rem;
+  line-height: 1.5;
+  transition: .5s ease-out;
+}
+
+.c:hover{
+  background-color: #808080;
+
 }
 
 header h1 {
-  margin: 0;
-  padding: 0;
   display: inline;
-  float:left;
+  float: left;
+  line-height: 20px;
+  transition: .5s ease-out;
 }
+
+header h1:hover{
+  color: red;
+}
+
+header {
+  background-color: #3A3B3C; 
+  padding: 30px;
+  width: 100%;
+
+  color: #FFFDE4;
+
+  z-index: 1;
+}
+
+body{
+  background-color: lightgray;
+  padding: 0;
+  margin: 0;
+  font-family:"Helvetica Neue", Arial;
+}
+
+a{
+  text-decoration: none;
+  color: #FCEEA7;
+}
+a:hover{
+  color: #F6CD8B;
+  transition: .5s ease-out;
+}
+
+h1{
+  font-weight: normal;
+  margin: 0;
+}
+
+
+
 
