--- a/style.css
+++ b/style.css
@@ -74,9 +74,10 @@ a{
   background-color: #3A3B3C; 
   padding: 30px;
   width: 100%;
-
-
-  z-index: 1;
+  position: fixed;
+  top: 0;
+  bottom: 86.5%;
+  z-index: 2;
 }
 .nav{
   color: inherit;
@@ -127,6 +128,7 @@ a{
   width: 100%;
   opacity: 0;
   pointer-events: none;
+  z-index: 1;
 }
 
 .about_modal.show{
@@ -176,14 +178,29 @@ a{
 
 /* typewritter team text */
 
+.bg_gif{
+  position: absolute; 
+  left: 0;
+  right: 0;
+  margin-top: 7%;
+  z-index: -1;
+  display: block;
+  background-image: url("img/gif_autista.gif");
+  width: 100%;
+  height: 380px;
+  margin-top: 4%;
+  filter: blur(8px);
+}
 
 .team_text{
-  margin-top: 10%;
-  padding: 10px;
+  margin-top: 4%;
+  padding: 150px;
+  margin-top: 6%;
   justify-content: center;
-  background-color: rgba(0,0,0,0.3);
+  background-color: rgba(0,0,0,0);
   display: flex;
   width: 100%;
+  margin-bottom: 5%;
 }
 
 .team_text_content{
